Fix Java Coding Standard errors mentioned in PR review
Variable names needed to be changed for convention and indentation for long lines was not 8 spaces.

Proper Java Coding Standard is required.